--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 <body>
     <canvas id="canvas" width="200" height="300"></canvas>
     <script src="ready.js"></script>
-    <script src="app.js"></script>
+    <!--<script src="app.js"></script>-->
+    <script src="snake.js"></script>
+    <script src="main.js"></script>
 </body>
 </html>
